parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration
Rule 5     statement -> array_declaration
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> function_declaration
Rule 9     statement -> assignment_statement
Rule 10    statement -> increment_statement
Rule 11    statement -> decrement_statement
Rule 12    declaration -> type ID SEMICOLON
Rule 13    declaration -> type ID ASSIGN expression SEMICOLON
Rule 14    type -> INT
Rule 15    type -> FLOAT
Rule 16    type -> DOUBLE
Rule 17    type -> CHAR
Rule 18    type -> BOOLEAN
Rule 19    type -> STRING
Rule 20    type -> VOID
Rule 21    array_declaration -> type LBRACKET RBRACKET ID SEMICOLON
Rule 22    array_declaration -> type ID LBRACKET RBRACKET SEMICOLON
Rule 23    array_declaration -> type LBRACKET RBRACKET ID ASSIGN NEW type LBRACKET NUMBER RBRACKET SEMICOLON
Rule 24    if_statement -> IF LPAREN condition RPAREN block
Rule 25    if_statement -> IF LPAREN condition RPAREN block ELSE block
Rule 26    condition -> expression relational_op expression
Rule 27    condition -> expression
Rule 28    relational_op -> LT
Rule 29    relational_op -> GT
Rule 30    relational_op -> LE
Rule 31    relational_op -> GE
Rule 32    relational_op -> EQ
Rule 33    relational_op -> NE
Rule 34    relational_op -> AND
Rule 35    relational_op -> OR
Rule 36    block -> LBRACE statement_list RBRACE
Rule 37    block -> LBRACE RBRACE
Rule 38    while_statement -> WHILE LPAREN condition RPAREN block
Rule 39    function_declaration -> type ID LPAREN parameter_list RPAREN block
Rule 40    parameter_list -> parameter
Rule 41    parameter_list -> parameter_list COMMA parameter
Rule 42    parameter_list -> empty
Rule 43    parameter -> type ID
Rule 44    assignment_statement -> ID ASSIGN expression SEMICOLON
Rule 45    increment_statement -> ID INCREMENT SEMICOLON
Rule 46    decrement_statement -> ID DECREMENT SEMICOLON
Rule 47    expression -> ID
Rule 48    expression -> NUMBER
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression MULTIPLY expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    expression -> ID INCREMENT
Rule 54    expression -> ID DECREMENT
Rule 55    expression -> LPAREN expression RPAREN
Rule 56    empty -> <empty>

Terminals, with rules where they appear

AND                  : 34
ASSIGN               : 13 23 44
BOOLEAN              : 18
CHAR                 : 17
COMMA                : 41
DECREMENT            : 46 54
DIVIDE               : 52
DOUBLE               : 16
ELSE                 : 25
EQ                   : 32
FLOAT                : 15
GE                   : 31
GT                   : 29
ID                   : 12 13 21 22 23 39 43 44 45 46 47 53 54
IF                   : 24 25
INCREMENT            : 45 53
INT                  : 14
LBRACE               : 36 37
LBRACKET             : 21 22 23 23
LE                   : 30
LPAREN               : 24 25 38 39 55
LT                   : 28
MINUS                : 50
MULTIPLY             : 51
NE                   : 33
NEW                  : 23
NUMBER               : 23 48
OR                   : 35
PLUS                 : 49
RBRACE               : 36 37
RBRACKET             : 21 22 23 23
RPAREN               : 24 25 38 39 55
SEMICOLON            : 12 13 21 22 23 44 45 46
STRING               : 19
VOID                 : 20
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

array_declaration    : 5
assignment_statement : 9
block                : 24 25 25 38 39
condition            : 24 25 38
declaration          : 4
decrement_statement  : 11
empty                : 42
expression           : 13 26 26 27 44 49 49 50 50 51 51 52 52 55
function_declaration : 8
if_statement         : 6
increment_statement  : 10
parameter            : 40 41
parameter_list       : 39 41
program              : 0
relational_op        : 26
statement            : 2 3
statement_list       : 1 3 36
type                 : 12 13 21 22 23 23 39 43
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . array_declaration
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . function_declaration
    (9) statement -> . assignment_statement
    (10) statement -> . increment_statement
    (11) statement -> . decrement_statement
    (12) declaration -> . type ID SEMICOLON
    (13) declaration -> . type ID ASSIGN expression SEMICOLON
    (21) array_declaration -> . type LBRACKET RBRACKET ID SEMICOLON
    (22) array_declaration -> . type ID LBRACKET RBRACKET SEMICOLON
    (23) array_declaration -> . type LBRACKET RBRACKET ID ASSIGN NEW type LBRACKET NUMBER RBRACKET SEMICOLON
    (24) if_statement -> . IF LPAREN condition RPAREN block
    (25) if_statement -> . IF LPAREN condition RPAREN block ELSE block
    (38) while_statement -> . WHILE LPAREN condition RPAREN block
    (39) function_declaration -> . type ID LPAREN parameter_list RPAREN block
    (44) assignment_statement -> . ID ASSIGN expression SEMICOLON
    (45) increment_statement -> . ID INCREMENT SEMICOLON
    (46) decrement_statement -> . ID DECREMENT SEMICOLON
    (14) type -> . INT
    (15) type -> . FLOAT
    (16) type -> . DOUBLE
    (17) type -> . CHAR
    (18) type -> . BOOLEAN
    (19) type -> . STRING
    (20) type -> . VOID

    IF              shift and go to state 14
    WHILE           shift and go to state 15
    ID              shift and go to state 13
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    VOID            shift and go to state 22

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    array_declaration              shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    function_declaration           shift and go to state 8
    assignment_statement           shift and go to state 9
    increment_statement            shift and go to state 10
    decrement_statement            shift and go to state 11
    type                           shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . array_declaration
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . function_declaration
    (9) statement -> . assignment_statement
    (10) statement -> . increment_statement
    (11) statement -> . decrement_statement
    (12) declaration -> . type ID SEMICOLON
    (13) declaration -> . type ID ASSIGN expression SEMICOLON
    (21) array_declaration -> . type LBRACKET RBRACKET ID SEMICOLON
    (22) array_declaration -> . type ID LBRACKET RBRACKET SEMICOLON
    (23) array_declaration -> . type LBRACKET RBRACKET ID ASSIGN NEW type LBRACKET NUMBER RBRACKET SEMICOLON
    (24) if_statement -> . IF LPAREN condition RPAREN block
    (25) if_statement -> . IF LPAREN condition RPAREN block ELSE block
    (38) while_statement -> . WHILE LPAREN condition RPAREN block
    (39) function_declaration -> . type ID LPAREN parameter_list RPAREN block
    (44) assignment_statement -> . ID ASSIGN expression SEMICOLON
    (45) increment_statement -> . ID INCREMENT SEMICOLON
    (46) decrement_statement -> . ID DECREMENT SEMICOLON
    (14) type -> . INT
    (15) type -> . FLOAT
    (16) type -> . DOUBLE
    (17) type -> . CHAR
    (18) type -> . BOOLEAN
    (19) type -> . STRING
    (20) type -> . VOID

    $end            reduce using rule 1 (program -> statement_list .)
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    ID              shift and go to state 13
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    VOID            shift and go to state 22

    statement                      shift and go to state 23
    declaration                    shift and go to state 4
    array_declaration              shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    function_declaration           shift and go to state 8
    assignment_statement           shift and go to state 9
    increment_statement            shift and go to state 10
    decrement_statement            shift and go to state 11
    type                           shift and go to state 12

state 3

    (2) statement_list -> statement .

    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    INT             reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    DOUBLE          reduce using rule 2 (statement_list -> statement .)
    CHAR            reduce using rule 2 (statement_list -> statement .)
    BOOLEAN         reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    VOID            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> declaration .

    IF              reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    ID              reduce using rule 4 (statement -> declaration .)
    INT             reduce using rule 4 (statement -> declaration .)
    FLOAT           reduce using rule 4 (statement -> declaration .)
    DOUBLE          reduce using rule 4 (statement -> declaration .)
    CHAR            reduce using rule 4 (statement -> declaration .)
    BOOLEAN         reduce using rule 4 (statement -> declaration .)
    STRING          reduce using rule 4 (statement -> declaration .)
    VOID            reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> array_declaration .

    IF              reduce using rule 5 (statement -> array_declaration .)
    WHILE           reduce using rule 5 (statement -> array_declaration .)
    ID              reduce using rule 5 (statement -> array_declaration .)
    INT             reduce using rule 5 (statement -> array_declaration .)
    FLOAT           reduce using rule 5 (statement -> array_declaration .)
    DOUBLE          reduce using rule 5 (statement -> array_declaration .)
    CHAR            reduce using rule 5 (statement -> array_declaration .)
    BOOLEAN         reduce using rule 5 (statement -> array_declaration .)
    STRING          reduce using rule 5 (statement -> array_declaration .)
    VOID            reduce using rule 5 (statement -> array_declaration .)
    $end            reduce using rule 5 (statement -> array_declaration .)
    RBRACE          reduce using rule 5 (statement -> array_declaration .)


state 6

    (6) statement -> if_statement .

    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    DOUBLE          reduce using rule 6 (statement -> if_statement .)
    CHAR            reduce using rule 6 (statement -> if_statement .)
    BOOLEAN         reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    VOID            reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    ID              reduce using rule 7 (statement -> while_statement .)
    INT             reduce using rule 7 (statement -> while_statement .)
    FLOAT           reduce using rule 7 (statement -> while_statement .)
    DOUBLE          reduce using rule 7 (statement -> while_statement .)
    CHAR            reduce using rule 7 (statement -> while_statement .)
    BOOLEAN         reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    VOID            reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> function_declaration .

    IF              reduce using rule 8 (statement -> function_declaration .)
    WHILE           reduce using rule 8 (statement -> function_declaration .)
    ID              reduce using rule 8 (statement -> function_declaration .)
    INT             reduce using rule 8 (statement -> function_declaration .)
    FLOAT           reduce using rule 8 (statement -> function_declaration .)
    DOUBLE          reduce using rule 8 (statement -> function_declaration .)
    CHAR            reduce using rule 8 (statement -> function_declaration .)
    BOOLEAN         reduce using rule 8 (statement -> function_declaration .)
    STRING          reduce using rule 8 (statement -> function_declaration .)
    VOID            reduce using rule 8 (statement -> function_declaration .)
    $end            reduce using rule 8 (statement -> function_declaration .)
    RBRACE          reduce using rule 8 (statement -> function_declaration .)


state 9

    (9) statement -> assignment_statement .

    IF              reduce using rule 9 (statement -> assignment_statement .)
    WHILE           reduce using rule 9 (statement -> assignment_statement .)
    ID              reduce using rule 9 (statement -> assignment_statement .)
    INT             reduce using rule 9 (statement -> assignment_statement .)
    FLOAT           reduce using rule 9 (statement -> assignment_statement .)
    DOUBLE          reduce using rule 9 (statement -> assignment_statement .)
    CHAR            reduce using rule 9 (statement -> assignment_statement .)
    BOOLEAN         reduce using rule 9 (statement -> assignment_statement .)
    STRING          reduce using rule 9 (statement -> assignment_statement .)
    VOID            reduce using rule 9 (statement -> assignment_statement .)
    $end            reduce using rule 9 (statement -> assignment_statement .)
    RBRACE          reduce using rule 9 (statement -> assignment_statement .)


state 10

    (10) statement -> increment_statement .

    IF              reduce using rule 10 (statement -> increment_statement .)
    WHILE           reduce using rule 10 (statement -> increment_statement .)
    ID              reduce using rule 10 (statement -> increment_statement .)
    INT             reduce using rule 10 (statement -> increment_statement .)
    FLOAT           reduce using rule 10 (statement -> increment_statement .)
    DOUBLE          reduce using rule 10 (statement -> increment_statement .)
    CHAR            reduce using rule 10 (statement -> increment_statement .)
    BOOLEAN         reduce using rule 10 (statement -> increment_statement .)
    STRING          reduce using rule 10 (statement -> increment_statement .)
    VOID            reduce using rule 10 (statement -> increment_statement .)
    $end            reduce using rule 10 (statement -> increment_statement .)
    RBRACE          reduce using rule 10 (statement -> increment_statement .)


state 11

    (11) statement -> decrement_statement .

    IF              reduce using rule 11 (statement -> decrement_statement .)
    WHILE           reduce using rule 11 (statement -> decrement_statement .)
    ID              reduce using rule 11 (statement -> decrement_statement .)
    INT             reduce using rule 11 (statement -> decrement_statement .)
    FLOAT           reduce using rule 11 (statement -> decrement_statement .)
    DOUBLE          reduce using rule 11 (statement -> decrement_statement .)
    CHAR            reduce using rule 11 (statement -> decrement_statement .)
    BOOLEAN         reduce using rule 11 (statement -> decrement_statement .)
    STRING          reduce using rule 11 (statement -> decrement_statement .)
    VOID            reduce using rule 11 (statement -> decrement_statement .)
    $end            reduce using rule 11 (statement -> decrement_statement .)
    RBRACE          reduce using rule 11 (statement -> decrement_statement .)


state 12

    (12) declaration -> type . ID SEMICOLON
    (13) declaration -> type . ID ASSIGN expression SEMICOLON
    (21) array_declaration -> type . LBRACKET RBRACKET ID SEMICOLON
    (22) array_declaration -> type . ID LBRACKET RBRACKET SEMICOLON
    (23) array_declaration -> type . LBRACKET RBRACKET ID ASSIGN NEW type LBRACKET NUMBER RBRACKET SEMICOLON
    (39) function_declaration -> type . ID LPAREN parameter_list RPAREN block

    ID              shift and go to state 24
    LBRACKET        shift and go to state 25


state 13

    (44) assignment_statement -> ID . ASSIGN expression SEMICOLON
    (45) increment_statement -> ID . INCREMENT SEMICOLON
    (46) decrement_statement -> ID . DECREMENT SEMICOLON

    ASSIGN          shift and go to state 26
    INCREMENT       shift and go to state 27
    DECREMENT       shift and go to state 28


state 14

    (24) if_statement -> IF . LPAREN condition RPAREN block
    (25) if_statement -> IF . LPAREN condition RPAREN block ELSE block

    LPAREN          shift and go to state 29


state 15

    (38) while_statement -> WHILE . LPAREN condition RPAREN block

    LPAREN          shift and go to state 30


state 16

    (14) type -> INT .

    ID              reduce using rule 14 (type -> INT .)
    LBRACKET        reduce using rule 14 (type -> INT .)


state 17

    (15) type -> FLOAT .

    ID              reduce using rule 15 (type -> FLOAT .)
    LBRACKET        reduce using rule 15 (type -> FLOAT .)


state 18

    (16) type -> DOUBLE .

    ID              reduce using rule 16 (type -> DOUBLE .)
    LBRACKET        reduce using rule 16 (type -> DOUBLE .)


state 19

    (17) type -> CHAR .

    ID              reduce using rule 17 (type -> CHAR .)
    LBRACKET        reduce using rule 17 (type -> CHAR .)


state 20

    (18) type -> BOOLEAN .

    ID              reduce using rule 18 (type -> BOOLEAN .)
    LBRACKET        reduce using rule 18 (type -> BOOLEAN .)


state 21

    (19) type -> STRING .

    ID              reduce using rule 19 (type -> STRING .)
    LBRACKET        reduce using rule 19 (type -> STRING .)


state 22

    (20) type -> VOID .

    ID              reduce using rule 20 (type -> VOID .)
    LBRACKET        reduce using rule 20 (type -> VOID .)


state 23

    (3) statement_list -> statement_list statement .

    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    INT             reduce using rule 3 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement_list statement .)
    DOUBLE          reduce using rule 3 (statement_list -> statement_list statement .)
    CHAR            reduce using rule 3 (statement_list -> statement_list statement .)
    BOOLEAN         reduce using rule 3 (statement_list -> statement_list statement .)
    STRING          reduce using rule 3 (statement_list -> statement_list statement .)
    VOID            reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 24

    (12) declaration -> type ID . SEMICOLON
    (13) declaration -> type ID . ASSIGN expression SEMICOLON
    (22) array_declaration -> type ID . LBRACKET RBRACKET SEMICOLON
    (39) function_declaration -> type ID . LPAREN parameter_list RPAREN block

    SEMICOLON       shift and go to state 31
    ASSIGN          shift and go to state 32
    LBRACKET        shift and go to state 33
    LPAREN          shift and go to state 34


state 25

    (21) array_declaration -> type LBRACKET . RBRACKET ID SEMICOLON
    (23) array_declaration -> type LBRACKET . RBRACKET ID ASSIGN NEW type LBRACKET NUMBER RBRACKET SEMICOLON

    RBRACKET        shift and go to state 35


state 26

    (44) assignment_statement -> ID ASSIGN . expression SEMICOLON
    (47) expression -> . ID
    (48) expression -> . NUMBER
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression MULTIPLY expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . ID INCREMENT
    (54) expression -> . ID DECREMENT
    (55) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 36
    NUMBER          shift and go to state 38
    LPAREN          shift and go to state 39

    expression                     shift and go to state 37

state 27

    (45) increment_statement -> ID INCREMENT . SEMICOLON

    SEMICOLON       shift and go to state 40


state 28

    (46) decrement_statement -> ID DECREMENT . SEMICOLON

    SEMICOLON       shift and go to state 41


state 29

    (24) if_statement -> IF LPAREN . condition RPAREN block
    (25) if_statement -> IF LPAREN . condition RPAREN block ELSE block
    (26) condition -> . expression relational_op expression
    (27) condition -> . expression
    (47) expression -> . ID
    (48) expression -> . NUMBER
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression MULTIPLY expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . ID INCREMENT
    (54) expression -> . ID DECREMENT
    (55) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 36
    NUMBER          shift and go to state 38
    LPAREN          shift and go to state 39

    condition                      shift and go to state 42
    expression                     shift and go to state 43

state 30

    (38) while_statement -> WHILE LPAREN . condition RPAREN block
    (26) condition -> . expression relational_op expression
    (27) condition -> . expression
    (47) expression -> . ID
    (48) expression -> . NUMBER
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression MULTIPLY expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . ID INCREMENT
    (54) expression -> . ID DECREMENT
    (55) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 36
    NUMBER          shift and go to state 38
    LPAREN          shift and go to state 39

    condition                      shift and go to state 44
    expression                     shift and go to state 43

state 31

    (12) declaration -> type ID SEMICOLON .

    IF              reduce using rule 12 (declaration -> type ID SEMICOLON .)
    WHILE           reduce using rule 12 (declaration -> type ID SEMICOLON .)
    ID              reduce using rule 12 (declaration -> type ID SEMICOLON .)
    INT             reduce using rule 12 (declaration -> type ID SEMICOLON .)
    FLOAT           reduce using rule 12 (declaration -> type ID SEMICOLON .)
    DOUBLE          reduce using rule 12 (declaration -> type ID SEMICOLON .)
    CHAR            reduce using rule 12 (declaration -> type ID SEMICOLON .)
    BOOLEAN         reduce using rule 12 (declaration -> type ID SEMICOLON .)
    STRING          reduce using rule 12 (declaration -> type ID SEMICOLON .)
    VOID            reduce using rule 12 (declaration -> type ID SEMICOLON .)
    $end            reduce using rule 12 (declaration -> type ID SEMICOLON .)
    RBRACE          reduce using rule 12 (declaration -> type ID SEMICOLON .)


state 32

    (13) declaration -> type ID ASSIGN . expression SEMICOLON
    (47) expression -> . ID
    (48) expression -> . NUMBER
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression MULTIPLY expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . ID INCREMENT
    (54) expression -> . ID DECREMENT
    (55) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 36
    NUMBER          shift and go to state 38
    LPAREN          shift and go to state 39

    expression                     shift and go to state 45

state 33

    (22) array_declaration -> type ID LBRACKET . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 46


state 34

    (39) function_declaration -> type ID LPAREN . parameter_list RPAREN block
    (40) parameter_list -> . parameter
    (41) parameter_list -> . parameter_list COMMA parameter
    (42) parameter_list -> . empty
    (43) parameter -> . type ID
    (56) empty -> .
    (14) type -> . INT
    (15) type -> . FLOAT
    (16) type -> . DOUBLE
    (17) type -> . CHAR
    (18) type -> . BOOLEAN
    (19) type -> . STRING
    (20) type -> . VOID

    RPAREN          reduce using rule 56 (empty -> .)
    COMMA           reduce using rule 56 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    VOID            shift and go to state 22

    type                           shift and go to state 47
    parameter_list                 shift and go to state 48
    parameter                      shift and go to state 49
    empty                          shift and go to state 50

state 35

    (21) array_declaration -> type LBRACKET RBRACKET . ID SEMICOLON
    (23) array_declaration -> type LBRACKET RBRACKET . ID ASSIGN NEW type LBRACKET NUMBER RBRACKET SEMICOLON
